# projects

./: README.md
Project Files/: index.html
Project Files/assets/css/: style.css
Project Files/assets/js/: script.js
face-recognition-attendance/: README.md  WARP.md  pyproject.toml
face-recognition-attendance/data/: attendance.csv  face_encodings.pkl
face-recognition-attendance/src/attendance/: __init__.py  config.py  main.py  recognition.py  storage.py
face-recognition-attendance/src/attendance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
